--- a/src/App.css
+++ b/src/App.css
@@ -26,3 +26,57 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+
+.message-container {
+  webkit-align-items: flex-end;
+  -webkit-box-align: flex-end;
+  -ms-flex-align: flex-end;
+  align-items: flex-end;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+  -webkit-justify-content: flex-start;
+  -ms-flex-pack: start;
+  justify-content: flex-start;
+}
+
+.chatbot-icon {
+  -webkit-animation: Lmuha .3s ease forwards;
+  animation: Lmuha .3s ease forwards;
+  border-radius: 50% 50% 0 50%;
+  box-shadow: rgba(0,0,0,0.15) 0px 1px 2px 0px;
+  height: 40px;
+  min-width: 40px;
+  padding: 3px;
+  -webkit-transform: scale(0);
+  -ms-transform: scale(0);
+  transform: scale(0);
+  -webkit-transform-origin: bottom right;
+  -ms-transform-origin: bottom right;
+  transform-origin: bottom right;
+  width: 40;
+}
+
+.chat-custom-message {
+  animation: Lmuha .3s ease forwards;
+  background: #6E48AA;
+  border-radius: 18px 18px 18px 0;
+  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.15);
+  color: #fff;
+  display: inline-block;
+  font-size: 14px;
+  max-width: 50%;
+  margin: 0 0 10px 0;
+  overflow: hidden;
+  position: relative;
+  padding: 12px;
+  -webkit-transform: scale(0);
+  -ms-transform: scale(0);
+  transform: scale(0);
+  -webkit-transform-origin: bottom left;
+  -ms-transform-origin: bottom left;
+  transform-origin: bottom left;
+}
+
